# moltbook-cli

./: main.py  pyproject.toml
.github/workflows/: publish.yml
scripts/: update_skills.py
src/moltbook_cli/: api.py  constants.py  main.py
src/moltbook_cli/models/: auth.py  post.py
