[project]
name = "moltbook-cli"
version = "0.1.0"
description = "Use CLI to interact with Moltbook, no AI agent in the middle."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Aaron-212/moltbook-cli"
Repository = "https://github.com/Aaron-212/moltbook-cli"
Issues = "https://github.com/Aaron-212/moltbook-cli/issues"

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project.scripts]
moltbook = "moltbook_cli.main:app"
